fix missing margins on headers

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -19,10 +19,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-
-  margin-top: 0;
   color: $text_color;
-
 }
 
 h1 { @extend .type_headline; font-family: $heading_font; }
